[package]
name = "cuda-pipeline"
version = "0.1.0"
edition = "2021"
description = "Data pipeline — ETL stages, map/filter/reduce, throughput tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-pipeline"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
